--- a/node/express-ejemplo/package.json
+++ b/node/express-ejemplo/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node --experimental-modules server/server.js",
+    "watch": "nodemon --experimental-modules server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
